aptosid-art-legacy (2011.03.1) UNRELEASED; urgency=low

  [ Stefan Lippers-Hollmann ]
  * NOT RELEASED YET
  * use xz to compress source and binaries.
  * fix translation for άκυρος.

  [ Rick Battle ]
  * fred bump + added void text 

 -- Rick Battle <rick.battle@solmera.com>  Fri, 06 Jan 2012 00:08:53 -0800

aptosid-art-legacy (2011.03.0) unstable; urgency=low

  * import Πόνος.

 -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Thu, 05 Jan 2012 00:32:17 +0100

aptosid-art-legacy (2011.02.3) unstable; urgency=low

  * fix dep5 syntax, add another gpl2+ stanza.

 -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Fri, 16 Sep 2011 00:32:02 +0200

aptosid-art-legacy (2011.02.2) unstable; urgency=low

  * use Format instead of Format-Specification in debian/copyright and fix URL
    to use alioth's new anonscm location.

 -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Thu, 15 Sep 2011 23:36:36 +0200

aptosid-art-legacy (2011.02.1) unstable; urgency=low

  * add accidentally omitted copyright stanza for Ἡμέρα.

 -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Fri, 15 Jul 2011 22:23:38 +0200

aptosid-art-legacy (2011.02.0) unstable; urgency=low

  * drop -edu wallpapers and infrastructure.
  * import Ἡμέρα release artwork.

 -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Fri, 15 Jul 2011 20:24:34 +0200

aptosid-art-legacy (2011.01.3) unstable; urgency=low

  * bump standards version to 3.9.2, no changes necessary.
  * update eMail addresses.
  * dos2unix.

 -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Fri, 29 Apr 2011 03:29:57 +0200

aptosid-art-legacy (2011.01.2) unstable; urgency=low

  * fix syntax error.

 -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Sun, 20 Feb 2011 03:03:41 +0100

aptosid-art-legacy (2011.01.1) unstable; urgency=low

  * drop support for gdm (#613491), needs further rework.

 -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Sun, 20 Feb 2011 02:50:28 +0100

aptosid-art-legacy (2011.01.0) unstable; urgency=low

  * merge geras:Γῆρας:2011-01::