@@ -1,9 +1,27 @@
-all:
-	for i in  void keres apate geras imera ponos; \
-		do $(MAKE) -C $$i $@; done
+DIRS =  void keres apate geras imera ponos
+BUILDDIRS = $(DIRS:%=build-%)
+#INSTALLDIRS = $(DIRS:%=install-%)
+CLEANDIRS = $(DIRS:%=clean-%)
 
-clean:
-	for i in  void keres apate geras imera ponos; \
-		do $(MAKE) -C $$i $@; done
+
+all: $(BUILDDIRS)
+$(DIRS): $(BUILDDIRS)
+$(BUILDDIRS):
+	$(MAKE) -C $(@:build-%=%)
+
+#install: $(INSTALLDIRS) all
+#$(INSTALLDIRS):
+#	$(MAKE) -C $(@:install-%=%) install
+
+clean: $(CLEANDIRS)
+$(CLEANDIRS): 
+	$(MAKE) -C $(@:clean-%=%) clean
 
 distclean: clean
+
+.PHONY: subdirs $(DIRS)
+.PHONY: subdirs $(BUILDDIRS)
+.PHONY: subdirs $(INSTALLDIRS)
+.PHONY: subdirs $(CLEANDIRS)
+#.PHONY: all install clean dist-clean
+.PHONY: all clean dist-clean
