@@ -3,7 +3,7 @@ Section: graphics
 Priority: extra
 Maintainer: Stefan Lippers-Hollmann <s.l-h@gmx.de>
 Uploaders: Bernard Gray <bernard.gray@gmail.com>,
- Rick Battle <rick.battle@celtrenicdesigns.com>
+ Rick Battle <rick.battle@solmera.com>
 Build-Depends: debhelper (>= 8),
  inkscape,
  perl,
@@ -18,11 +18,11 @@ Vcs-Browser: http://svn.berlios.de/wsvn/fullstory/aptosid-art-legacy/trunk/
 #Architecture: all
 #Depends: ${misc:Depends},
 # gdm3
-#Description: GDM3 theme for aptosid 0-0 release
+#Description: GDM3 theme for aptosid void release
 # release specific artwork theme for the GDM3 display manager to be used in
 # combination GTK2 based desktop environments like Xfce or LXDE.
 # .
-# GDM3 artwork for: aptosid 0-0 (άκυρος)
+# GDM3 artwork for: aptosid void (άκυρος)
 # .
 # This package does not override existing theme configurations and needs to be
 # selected manually.
@@ -35,22 +35,22 @@ Depends: ${misc:Depends},
  aptosid-art-kdm-void
 Recommends: aptosid-art-wallpaper-void,
  dmz-cursor-theme
-Description: KDE theme for the aptosid 0-0 release
+Description: KDE theme for the aptosid void release
  release specific metapackage depending on ksplash, kdm and KDE themes to be
  used in combination with the K Desktop Environment. This package also
  provides a release specific color scheme for KDE.
  .
- KDE artwork metapackage for: aptosid 0-0 (άκυρος)
+ KDE artwork metapackage for: aptosid void (άκυρος)
 
 Package: aptosid-art-kdm-void
 Architecture: all
 Depends: ${misc:Depends},
  kdm
-Description: KDM theme for the aptosid 0-0 release
+Description: KDM theme for the aptosid void release
  release specific artwork theme for the KDM display manager to be used in
  combination with the K Desktop Environment.
  .
- KDM artwork for: aptosid 0-0 (άκυρος)
+ KDM artwork for: aptosid void (άκυρος)
  .
  This package does not override existing theme configurations and needs to be
  selected manually.
@@ -59,10 +59,10 @@ Package: aptosid-art-ksplash-void
 Architecture: all
 Depends: ${misc:Depends},
  kdebase-workspace-bin
-Description: KDE ksplash theme for the aptosid 0-0 release
+Description: KDE ksplash theme for the aptosid void release
  release specific KDE ksplash theme, using the default ksplash engine.
  .
- KDE ksplash artwork for: aptosid 0-0 (άκυρος)
+ KDE ksplash artwork for: aptosid void (άκυρος)
  .
  This package does not override existing theme configurations and needs to be
  selected manually.
@@ -71,11 +71,11 @@ Package: aptosid-art-wallpaper-void
 Architecture: all
 Provides: aptosid-art-wallpaper-theme
 Depends: ${misc:Depends}
-Description: aptosid wallpaper for the 0-0 release
+Description: aptosid wallpaper for the void release
  release specific wallpapers, compatible with the K Desktop Environment, Xfce,
  LXDE and GNOME.
  .
- Wallpapers for: aptosid 0-0 (άκυρος)
+ Wallpapers for: aptosid void (άκυρος)
  .
  This package does not override existing theme configurations and needs to be
  selected manually.
@@ -87,20 +87,20 @@ Depends: ${misc:Depends},
  aptosid-art-xsplash-void
 Recommends: aptosid-art-wallpaper-void,
  dmz-cursor-theme
-Description: Xfce theme for the aptosid 0-0 release
+Description: Xfce theme for the aptosid void release
  release specific metapackage depending on xfce4-session, gdm3 and Xfce themes
  to be used in combination with the Xfce desktop environment.
  .
- Xfce artwork metapackage for: aptosid 0-0 (άκυρος)
+ Xfce artwork metapackage for: aptosid void (άκυρος)
 
 Package: aptosid-art-xsplash-void
 Architecture: all
 Depends: ${misc:Depends},
  xfce4-session
-Description: Xfce splash theme for the aptosid 0-0 release
+Description: Xfce splash theme for the aptosid void release
  release specific Xfce splash theme, based on the balou theme engine.
  .
- Xfce xsplash artwork for: aptosid 0-0 (άκυρος)
+ Xfce xsplash artwork for: aptosid void (άκυρος)
  .
  This package does not override existing theme configurations and needs to be
  selected manually.
