@@ -2,6 +2,7 @@
 
 THEME= aptosid-void
 CONTROLDIR= 1920x1200
+SIZES = 1280x1024 1600x1200 1920x1080
 
 all: prepare background freds
 
@@ -15,16 +16,24 @@ prepare:
 	cp Theme.rc $(THEME)/
 	cp description.txt $(THEME)/$(CONTROLDIR)
 
-background:
+1280x1024:
 	inkscape --without-gui --export-width=1280 --export-height=1024 \
 		--export-png="$(THEME)/1280x1024/$@.png" $@.svg
+
+1600x1200:
 	inkscape --without-gui --export-png="$(THEME)/1600x1200/$@.png" $@.svg
+
+1920x1080:
 	inkscape --without-gui --export-width=1920 --export-height=1080 \
 		--export-png="$(THEME)/1920x1080/$@.png" $@-really-wide.svg
+
+1920x1200:
 	inkscape --without-gui --export-png="$(THEME)/$(CONTROLDIR)/$@.png" $@-wide.svg
 
+background: 1280x1024 1600x1200 1920x1080 1920x1200
+
 freds:
-	./make_the_freds
+	./make_the_freds || :
 	ln -s  ../$(CONTROLDIR)/fred.png $(THEME)/1920x1080/fred.png
 	ln -s  ../$(CONTROLDIR)/fred.png $(THEME)/1600x1200/fred.png
 	ln -s  ../$(CONTROLDIR)/fred.png $(THEME)/1280x1024/fred.png
