@@ -1,14 +1,16 @@
 aptosid-art-legacy (2011.03.1) UNRELEASED; urgency=low
 
-  [ Stefan Lippers-Hollmann ]
   * NOT RELEASED YET
+
+  [ Stefan Lippers-Hollmann ]
   * use xz to compress source and binaries.
   * fix translation for άκυρος.
+  * introduce initial step of build concurrency.
 
   [ Rick Battle ]
   * fred bump + added void text 
 
- -- Rick Battle <rick.battle@solmera.com>  Fri, 06 Jan 2012 00:08:53 -0800
+ -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Fri, 06 Jan 2012 23:48:07 +0100
 
 aptosid-art-legacy (2011.03.0) unstable; urgency=low
 
